[package]
name = "gmapping_rs"
version = "0.1.0"
authors = ["Garratt Gallagher <garratt@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "^0"
rand = "0.7.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
