[package]
name = "procmap"
version = "0.1.0"
authors = ["Garratt Gallagher <garratt@google.com>"]
edition = "2018"

[dependencies]
cairo-rs = "^0"
rand = "0.6"
#rand = { version = "0.6", features = ["small_rng"] }
poisson = "0.10.1"
nalgebra = "0.17"
voronator = "0.1.0"
#math = "0.2.1"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
